src/test/resources/valid_programs/if_else__scoping.notc
// Each if-else branch should define a new scope
void main() {
    int i = 1;
    if (true)
        int i = 2;
    else
        int i = 3;
    printInt(i);

    int j = 10;
    if (false) {
        int j = 20;
    } else {
        int j = 30;
        printInt(j);
    }
    printInt(j);
}
