src/test/resources/semantic_errors/new_scope_same_name_wrong_type.notc
void give_me_int(int num) {
}

void main() {
    int i = 10;
    {
        string i = "";
        give_me_int(i);
    }
}
